# swc-rs-example

./: Cargo.toml  README.md
src/: main.rs
